Fix bug with z-index menu

--- a/app/icoLanding/header.sass
+++ b/app/icoLanding/header.sass
@@ -197,7 +197,7 @@
 	.top
 		line-height: 5vw
 		position: fixed
-		left: 0
+		// left: 0
 		right: 0
 		padding: 0 4vw
 		z-index: 5
