--- a/app/icoLanding/sass/_media.sass
+++ b/app/icoLanding/sass/_media.sass
@@ -11,6 +11,8 @@
 
 // /* Large Devices, Wide Screens */
 @media only screen and (max-width : 768px)
+	.main .top
+		left: 0
 	.contpre
 		width: 20vw;
 		height: 20vw;
